# slackbot

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  2026-march.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: commands.md  deployment.md  local-development.md  slack-app-setup.md
forms/: 2026-march.yaml
hackathons/: 2026-march.yaml
infra/: app.py
infra/stacks/: bot_stack.py
schemas/: hackathon-form.schema.json
src/nf_core_bot/: __init__.py  __main__.py  app.py  config.py
src/nf_core_bot/checks/: __init__.py  github.py  slack_profile.py
src/nf_core_bot/commands/: __init__.py  help.py  router.py
src/nf_core_bot/commands/community/: __init__.py
src/nf_core_bot/commands/github/: __init__.py  add_member.py  invite_flow.py  (+1 more)
src/nf_core_bot/db/: __init__.py  client.py  hackathons.py  oncall.py  registrations.py  sites.py
src/nf_core_bot/forms/: __init__.py  builder.py  handler.py  loader.py
src/nf_core_bot/permissions/: __init__.py  checks.py
src/nf_core_bot/scheduler/: __init__.py  oncall_jobs.py
tests/: conftest.py  helpers.py  test_add_member.py  test_add_member_shortcut.py  test_admin.py  test_attendees.py  test_db_hackathons.py  test_db_registrations.py  test_db_sites.py  test_form_builder.py  test_form_handler.py  test_form_loader.py  test_github_checks.py  test_list_cmd.py  test_oncall_commands.py  test_oncall_db.py  test_oncall_scheduler.py  test_permissions.py  test_register.py  test_router.py  test_router_integration.py  test_slack_profile.py
(+13 files in other folders)
