[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nf-core-bot"
version = "0.1.0"
description = "Slack bot for the nf-core bioinformatics community"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.20,<2",
    "slack-sdk>=3.33,<4",
    "aiohttp>=3.10,<4",
    "boto3>=1.35,<2",
    "httpx>=0.27,<1",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "moto[dynamodb]>=5,<6",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "boto3-stubs[dynamodb]>=1.35,<2",
    "types-PyYAML>=6.0,<7",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["moto", "moto.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/nf_core_bot"]
